src/components/blocks/carousel/_carousel.scss
@use "../../base";
@use "../../mixins";

.b-carousel {
  --carousel-width: 1200px;
  --carousel-max-width: 1200px;
  --carousel-overflow: calc((var(--carousel-max-width) - var(--carousel-width)) / 2);
  --item-max-width: var(--carousel-width);
  --items-per-view: 1;
  --items-gap: 10px;
  --items-offset: 0;
  --transition-speed: 0.5s;

  margin-bottom: 10px;
  width: 100%;

  @include mixins.breakpoints-bpMinXSmall {
    --items-per-view: 2;
  }

  @include mixins.breakpoints-bpMinSmall {
    --items-gap: 20px;

    margin-bottom: 20px;
  }

  @include mixins.breakpoints-bpMinMedium {
    --items-per-view: 3;
  }

  &__ctrls {
    display: none;

    &--active {
      @include mixins.breakpoints-bpMinSmall {
        display: flex;
        gap: 6px;
        justify-content: flex-end;
        margin: 20px auto;
        max-width: var(--carousel-width);
      }
    }
  }

  &__viewport {
    margin: 0 calc(-1 * var(--carousel-overflow)) 0 0;
    overflow-x: auto;
    scroll-behavior: smooth; // necessary to prevent browser jumping instantly when focussing off-screen elements
    scroll-snap-type: x mandatory;
    scrollbar-color: base.sitecolors-siteColor("vam-grey-3") transparent;
    scrollbar-width: thin;
    
    .b-carousel--unclipped > & {
      margin: 0 calc(-1 * var(--carousel-overflow));
      overflow: hidden;
      padding: 0 var(--carousel-overflow);
      scroll-snap-type: none;
    }
  }

  &__list {
    display: flex;
    gap: var(--items-gap);
    transform: translateX(var(--items-offset));
    transition: transform var(--transition-speed) ease;

    // pseudo el used to pad the list so that last item right-aligns w/ ctrls
    &::after {
      color: transparent;
      content: '.';
      flex: 0 0 var(--carousel-overflow);
      margin-left: calc(-1 * var(--items-gap)); // eliminate the extra flex gap this pseudo el creates
    }
  }

  &__item {
    --item-peek: calc(80px + var(--items-gap));
    --item-peek-adjust: min(var(--item-peek) - min(var(--carousel-overflow), var(--item-peek)), var(--item-peek));

    flex: 1 0 calc(((var(--carousel-width) - ((var(--items-per-view) - 1) * var(--items-gap)) - var(--item-peek-adjust)) / var(--items-per-view)));
    max-width: var(--item-max-width);
    scroll-snap-align: start;
    scroll-snap-stop: normal;

    @include mixins.breakpoints-bpMinSmall {
      --item-peek: calc(42px + var(--items-gap));
    }

    &#{&}:focus-visible {
      box-shadow: none;
    }
  }
}

